Set up theme file > #51

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,300i,400,500,700|Roboto:300,400,500,700");
+
 pre {
   font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
