available date functions added

--- a/client/src/components/Pages/HostProfile/Calendar.css
+++ b/client/src/components/Pages/HostProfile/Calendar.css
@@ -88,7 +88,7 @@
   background: #a9d4ff;
 }
 .react-calendar__tile--active {
-  background: #006edc;
+  background: #0ac7e7;
   color: white;
 }
 .react-calendar__tile--active:enabled:hover,
